# napari-microfilm

./: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_microfilm/: __init__.py  microfilm_widget.py  napari.yaml  napari_panel.py  panel_item.py  panel_items_widget.py  panel_list_control_widget.py  utils.py
src/napari_microfilm/_tests/: test_widget.py
